# envy

./: LICENSE  README.md  pyproject.toml
envy/: __init__.py  core.py
