[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envy"
authors = [
    { name="Nicola Mignoni", email="nicola.mignoni@poliba.it" }
]
description = "Vectorization made convenient."
keywords = [
  "linear algebra",
  "optimization",
  "mathematical modelling"
]
readme = "README.md"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",    
  "Operating System :: OS Independent",
]
dependencies = [ 
  "numpy" 
]

[tool.hatch.version]
path = "envy/__init__.py"
